# kmdb

./: pyproject.toml
genres/: models.py
genres/migrations/: 0001_initial.py
movies/: models.py  permissions.py  serializers.py  views.py
movies/migrations/: 0001_initial.py
reviews/: models.py  serializers.py  views.py
reviews/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  views.py
users/management/commands/: create_admin.py
